fixed dropdown arrow icon in header menu when on tablet - client feedback

--- a/core/layout/sass/_responsive.scss
+++ b/core/layout/sass/_responsive.scss
@@ -18,7 +18,7 @@
 		.span7 {
 			.row-fluid {
 				.span3 {
-					width: 25%;
+					width: 26%;
 					border-bottom: none;
 					margin-bottom: 0;
 					margin-top: 20px;
@@ -35,7 +35,7 @@
 
 						.icon {
 							float: left;
-							margin: 8px 6px 0;
+							margin: 8px 5px 0;
 						}
 					}
 				}
