--- a/core/layout/sass/_theme_specific.scss
+++ b/core/layout/sass/_theme_specific.scss
@@ -105,7 +105,7 @@ body.videoRecorder, body.videoPlayer {
 									float: left;
 									width: 20px;
 									height: 20px;
-									margin-right: 8px;
+									margin-right: 5px;
 									margin-top: 3px;
 									@include background(inline-image("svg/menu_about.svg") no-repeat);
 								}
